Fetching location permission changed, app crash handling while clicking on country to see the statistics

--- a/app/src/main/res/layout/activity_covid_questionnaire_redirection.xml
+++ b/app/src/main/res/layout/activity_covid_questionnaire_redirection.xml
@@ -20,7 +20,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <com.leo.simplearcloader.SimpleArcLoader
                 android:visibility="visible"
@@ -42,18 +42,16 @@
                     android:layout_width="250dp"
                     android:layout_height="250dp"
                     android:layout_gravity="center_horizontal"></com.anychart.AnyChartView>
-
-
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/statscard"
                 android:layout_width="match_parent"
-                android:layout_height="320dp"
+                android:layout_height="250dp"
                 android:layout_below="@id/chartCard"
                 android:layout_marginTop="@dimen/common_5_dp"
                 app:cardElevation="@dimen/common_4_dp"
-                android:clipToPadding="false"
+                android:clipToPadding="true"
                 android:elevation="@dimen/common_2_dp"
                 app:cardMaxElevation="@dimen/common_5_dp"
                 >
@@ -61,8 +59,8 @@
                 <ScrollView
                     android:id="@+id/statsScroll"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fillViewport="false">
+                    android:layout_height="match_parent"
+                    android:fillViewport="true">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -312,7 +310,7 @@
                                 android:id="@+id/txttodayrecover"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Deaths Today"
+                                android:text="Recovered Today"
                                 android:textSize="@dimen/h1"
                                 android:fontFamily="@font/gotham_medium"
                                 android:textColor="#474747"
@@ -334,22 +332,17 @@
 
             </androidx.cardview.widget.CardView>
 
-
             <Button
                 android:id="@+id/btnsurvey"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_marginTop="@dimen/common_10_dp"
-                android:layout_marginBottom="@dimen/common_10_dp"
+                android:layout_below="@id/statscard"
                 android:textColor="@color/color_white"
                 android:background="#474747"
                 android:fontFamily="@font/gotham_medium"
-                android:textSize="@dimen/h4"
-                android:layout_margin="@dimen/common_5_dp"
+                android:textSize="@dimen/h3"
+                android:layout_margin="@dimen/common_3_dp"
                 android:text="Take Covid Survey" />
-
 
         </RelativeLayout>
     </LinearLayout>
