back toolbar added

--- a/app/src/main/res/layout/activity_appointment_booking.xml
+++ b/app/src/main/res/layout/activity_appointment_booking.xml
@@ -26,45 +26,30 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <devs.mulham.horizontalcalendar.HorizontalCalendarView
-                android:id="@+id/calendarView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:background="@color/colorPrimary"
-                android:padding="10dp"
-                app:layout_constraintBottom_toTopOf="@+id/slotListRecyclerView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar"
-                app:textColorSelected="#FFFF" />
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/slotListRecyclerView"
                 android:layout_width="410dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="1dp"
 
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="1dp"
                 android:layout_marginBottom="60dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.03"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:text="@string/appointment_book_title"
                 android:textAllCaps="true"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/calendarView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +67,22 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/slotListRecyclerView" />
+
+            <EditText
+                android:id="@+id/editTextDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="101dp"
+                android:layout_marginTop="34dp"
+                android:layout_marginEnd="100dp"
+                android:ems="10"
+                android:clickable="true"
+                android:focusable="false"
+                android:inputType="date"
+                app:layout_constraintBottom_toTopOf="@+id/slotListRecyclerView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
