--- a/app/src/main/res/layout/activity_appointment_history.xml
+++ b/app/src/main/res/layout/activity_appointment_history.xml
@@ -21,7 +21,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/appointmentListRecycler"
             android:layout_width="409dp"
-            android:layout_height="673dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             android:layout_marginEnd="1dp"
