--- a/app/src/main/res/layout/activity_national_covid_stats.xml
+++ b/app/src/main/res/layout/activity_national_covid_stats.xml
@@ -6,12 +6,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activity.userActivity.NationalCovidStats">
+    <include
+        android:id="@+id/back_toolbar"
+        layout="@layout/back_toolbar" />
+
 
     <EditText
         android:id="@+id/searchcountry"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
+
         android:hint="Search Country"
         ></EditText>
     <androidx.recyclerview.widget.RecyclerView
