--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".activity.userActivity.UserProfileActivity">
 
+    <include
+        android:id="@+id/back_toolbar"
+        layout="@layout/back_toolbar" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -14,6 +18,7 @@
         android:text="Please update your details with us"
         android:textSize="@dimen/h2"
         android:gravity="center"
+        android:layout_below="@id/back_toolbar"
         android:fontFamily="@font/gotham_medium"
         android:textColor="#474747"
         android:typeface="normal"/>
