--- a/app/src/main/res/layout/activity_appointment_confirmation.xml
+++ b/app/src/main/res/layout/activity_appointment_confirmation.xml
@@ -39,6 +39,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="20dp"
+                android:fontFamily="@font/gotham_medium"
+                android:textSize="@dimen/h3"
                 android:text="@string/email_label"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar" />
@@ -49,6 +51,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
+                android:fontFamily="@font/gotham_book"
+                android:textSize="@dimen/h4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -58,6 +62,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="30dp"
+                android:fontFamily="@font/gotham_medium"
+                android:textSize="@dimen/h3"
                 android:text="@string/appointment_date_time_label"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/emailValue" />
@@ -68,6 +74,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
+                android:fontFamily="@font/gotham_book"
+                android:textSize="@dimen/h4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -77,6 +85,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="30dp"
+                android:fontFamily="@font/gotham_medium"
+                android:textSize="@dimen/h3"
                 android:text="@string/hospital_name_label"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/slotValue" />
@@ -87,6 +97,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
+                android:fontFamily="@font/gotham_book"
+                android:textSize="@dimen/h4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
@@ -99,7 +111,13 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                android:background="#474747"
+                android:textSize="@dimen/h4"
+                android:fontFamily="@font/gotham_medium"
+                android:textColor="@color/color_white"
+                android:paddingLeft="@dimen/common_12_dp"
+                android:paddingRight="@dimen/common_12_dp"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
