--- a/app/src/main/res/layout/activity_covid_questionnaire_redirection.xml
+++ b/app/src/main/res/layout/activity_covid_questionnaire_redirection.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
@@ -17,26 +18,26 @@
             android:id="@+id/toolbar"
             layout="@layout/main_toolbar" />
 
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <com.leo.simplearcloader.SimpleArcLoader
-                android:visibility="visible"
-                android:id="@+id/loader"
-                android:layout_centerInParent="true"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:arc_style="simple_arc"
-                >
-            </com.leo.simplearcloader.SimpleArcLoader>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/chartCard"
                 android:layout_width="match_parent"
                 android:layout_height="290dp">
 
+                <com.leo.simplearcloader.SimpleArcLoader
+                    android:visibility="visible"
+                    android:id="@+id/loader"
+                    android:layout_gravity="center"
+                    android:layout_width="80dp"
+                    android:elevation="80dp"
+                    app:arc_speed="slow"
+                    android:layout_height="80dp"
+                    app:arc_style="simple_arc"
+                    >
+                </com.leo.simplearcloader.SimpleArcLoader>
                 <com.anychart.AnyChartView
                     android:id="@+id/covidChart"
                     android:layout_width="250dp"
@@ -333,7 +334,6 @@
 
 
             </androidx.cardview.widget.CardView>
-
 
             <Button
                 android:id="@+id/btnsurvey"
