--- a/app/src/main/res/layout/custom_hospital_list.xml
+++ b/app/src/main/res/layout/custom_hospital_list.xml
@@ -1,13 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+   tools:context=".activity.userActivity.HospitalList">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/main_toolbar" />
+
+    <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="170dp"
+    android:layout_marginTop="@dimen/common_2_dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/color_white"
     app:cardCornerRadius="@dimen/common_8_dp"
     app:cardElevation="@dimen/common_5_dp"
     android:elevation="@dimen/common_2_dp"
-    android:layout_margin="@dimen/common_12_dp">
+   >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -56,8 +78,18 @@
             android:textSize="@dimen/h4"
             />
 
-
-
-
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
+
+</LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:visibility="visible"
+        app:headerLayout="@layout/header"
+        app:menu="@menu/navigation_menu" />
+</androidx.drawerlayout.widget.DrawerLayout>
+
