--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -4,16 +4,20 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/hospitalList"
+            android:icon="@drawable/ic_list"
             android:title="Hospital List" />
 
         <item
             android:id="@+id/questionList"
+            android:icon="@drawable/ic_questionnaire"
             android:title="Covid Questionnaire"/>
         <item
             android:id="@+id/countries"
+            android:icon="@drawable/ic_graphic"
             android:title="National Covid Statistics" />
         <item
             android:id="@+id/appointmentList"
+            android:icon="@drawable/ic_calendar"
             android:title="Appointment History" />
 
     </group>
@@ -22,21 +26,24 @@
             <group android:checkableBehavior="single">
                 <item
                     android:id="@+id/login"
+                    android:icon="@drawable/ic_login"
                     android:title="Login" />
 
                 <item
                     android:id="@+id/register"
+                    android:icon="@drawable/ic_registration"
                     android:title="Register" />
 
                 <item
                     android:id="@+id/profile"
                     android:title="Profile"
-                    android:icon="@drawable/ic_user"
+                    android:icon="@drawable/ic_useric"
                     app:showAsAction="ifRoom"
                     />
 
                 <item
                     android:id="@+id/logout"
+                    android:icon="@drawable/ic_logout"
                     android:title="Logout" />
             </group>
         </menu>
