--- a/app/src/main/res/layout/activity_hospital_list.xml
+++ b/app/src/main/res/layout/activity_hospital_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/hospitalListLayout"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +9,6 @@
     <include
         android:id="@+id/back_toolbar"
         layout="@layout/back_toolbar" />
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/hospitalRecycle"
