--- a/app/src/main/res/layout/custom_hospital_list.xml
+++ b/app/src/main/res/layout/custom_hospital_list.xml
@@ -1,97 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawerLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-   tools:context=".activity.userActivity.HospitalList">
-
-<LinearLayout
-    android:layout_width="match_parent"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
-
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/main_toolbar" />
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="170dp"
-    android:layout_marginTop="@dimen/common_2_dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/color_white"
-    app:cardCornerRadius="@dimen/common_8_dp"
-    app:cardElevation="@dimen/common_5_dp"
-    android:elevation="@dimen/common_2_dp"
-   >
-    <RelativeLayout
+        android:elevation="@dimen/common_2_dp"
+        android:layout_height="170dp"
+        android:layout_marginTop="@dimen/common_2_dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        app:cardBackgroundColor="@color/color_white"
+        app:cardCornerRadius="@dimen/common_8_dp"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="@dimen/common_10_dp">
 
-        <TextView
-            android:id="@+id/hospitalNameText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Grand River Hospital"
-            android:drawableLeft="@drawable/hospital"
-            android:fontFamily="@font/gotham_book"
-            android:textColor="#474747"
-            android:layout_marginTop="@dimen/common_12_dp"
-            android:layout_marginLeft="@dimen/common_12_dp"
-            android:lineSpacingExtra="4sp"
-            android:textSize="@dimen/h2"
-            android:drawablePadding="@dimen/common_10_dp"/>
-        <TextView
-            android:id="@+id/appointmentDateTimeText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/hospitalNameText"
-            android:drawableLeft="@drawable/hospital"
-            android:layout_marginTop="@dimen/common_10_dp"
-            android:text="+12266001297"
-            android:fontFamily="@font/gotham_book"
-            android:textColor="#474747"
-            android:layout_marginLeft="@dimen/common_12_dp"
-            android:lineSpacingExtra="4sp"
-            android:textSize="@dimen/h3"
-            android:drawablePadding="@dimen/common_10_dp"/>
-        <TextView
-            android:id="@+id/hospitalAddress"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/appointmentDateTimeText"
-            android:text="Hello \n How are \n You"
-            android:drawableLeft="@drawable/hospital"
-            android:singleLine="false"
-            android:scrollHorizontally="false"
-            android:lines="3"
-            android:maxLines="3"
-            android:fontFamily="@font/gotham_book"
-            android:layout_marginLeft="@dimen/common_12_dp"
-            android:layout_marginTop="@dimen/common_10_dp"
-            android:textColor="#474747"
-            android:lineSpacingExtra="4sp"
-            android:textSize="@dimen/h4"
-            android:drawablePadding="@dimen/common_10_dp"/>
+        <RelativeLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent">
 
-    </RelativeLayout>
-</androidx.cardview.widget.CardView>
+            <TextView
+                android:drawableLeft="@drawable/hospital"
+                android:drawablePadding="@dimen/common_10_dp"
+                android:fontFamily="@font/gotham_book"
+                android:id="@+id/hospitalNameText"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/common_12_dp"
+                android:layout_marginTop="@dimen/common_12_dp"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="4sp"
+                android:text="Grand River Hospital"
+                android:textColor="#474747"
+                android:textSize="@dimen/h2" />
+
+            <TextView
+                android:id="@+id/appointmentDateTimeText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/hospitalNameText"
+                android:layout_marginLeft="@dimen/common_12_dp"
+                android:layout_marginTop="@dimen/common_10_dp"
+                android:drawableStart="@drawable/phone_icon"
+                android:drawableLeft="@drawable/hospital"
+                android:drawablePadding="@dimen/common_10_dp"
+                android:fontFamily="@font/gotham_book"
+                android:lineSpacingExtra="4sp"
+                android:text="+12266001297"
+                android:textColor="#474747"
+                android:textSize="@dimen/h3" />
+
+            <TextView
+                android:id="@+id/hospitalAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/appointmentDateTimeText"
+                android:layout_marginLeft="@dimen/common_12_dp"
+                android:layout_marginTop="@dimen/common_10_dp"
+                android:drawableStart="@drawable/hospital_icon_location"
+                android:drawableLeft="@drawable/hospital"
+                android:drawablePadding="@dimen/common_10_dp"
+                android:fontFamily="@font/gotham_book"
+                android:lineSpacingExtra="4sp"
+                android:lines="3"
+                android:maxLines="3"
+                android:scrollHorizontally="false"
+                android:singleLine="false"
+                android:text="Hello \n How are \n You"
+                android:textColor="#474747"
+                android:textSize="@dimen/h4" />
+
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigationView"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:visibility="visible"
-        app:headerLayout="@layout/header"
-        app:menu="@menu/navigation_menu" />
-</androidx.drawerlayout.widget.DrawerLayout>
 
