--- a/app/src/main/res/layout/activity_appointment_booking.xml
+++ b/app/src/main/res/layout/activity_appointment_booking.xml
@@ -32,14 +32,14 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="1dp"
 
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="1dp"
                 android:layout_marginBottom="60dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.03"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
             <TextView
                 android:id="@+id/textView6"
@@ -75,14 +75,27 @@
                 android:layout_marginStart="101dp"
                 android:layout_marginTop="34dp"
                 android:layout_marginEnd="100dp"
-                android:ems="10"
                 android:clickable="true"
+                android:ems="10"
                 android:focusable="false"
                 android:inputType="date"
                 app:layout_constraintBottom_toTopOf="@+id/slotListRecyclerView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/gotham_medium"
+                android:text="@string/choose_a_slot"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toTopOf="@+id/slotListRecyclerView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
