--- a/app/src/main/res/layout/activity_appointment_confirmation.xml
+++ b/app/src/main/res/layout/activity_appointment_confirmation.xml
@@ -26,7 +26,7 @@
 
             <include
                 android:id="@+id/toolbar"
-                layout="@layout/main_toolbar"
+                layout="@layout/back_toolbar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
