--- a/app/src/main/res/layout/slides_layout.xml
+++ b/app/src/main/res/layout/slides_layout.xml
@@ -9,9 +9,10 @@
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="0dp"
-        android:layout_height="400dp"
+        android:layout_height="300dp"
         android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/symbol" />
@@ -21,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="174dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="178dp"
         android:fontFamily="@font/antic"
         android:gravity="center"
@@ -35,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="176dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="176dp"
         android:fontFamily="@font/andika"
         android:gravity="center"
